--- a/css/style.css
+++ b/css/style.css
@@ -1495,3 +1495,4 @@ background-image: url(https://27.monvillagenormand.fr/images/300/327000359.webp)
     display: none;
 }
 
+/* ceci est un commentaire */
