--- a/css/style.css
+++ b/css/style.css
@@ -398,27 +398,13 @@ text-align: center;
 color: #000000;
 }  
 
-#txt-img-lieu 
+#ii 
 {
-    display: flex;
-    justify-content: flex-end;
-}
+display: flex;
 
-#txt-infos-lieu
-{
-    margin-left: 50px;   
 }
 
 
-#txt-infos-lieu p 
-{
-
-width: 65%;
-font-size: 18px;
-line-height: 22px;
-line-height: 1.5em;
-color: #000000; 
-} 
 
 #infos-local
 {
@@ -427,7 +413,8 @@ color: #000000;
 font-size: 18px;
 line-height: 22px;
 line-height: 1.5em;
-color: #000000; 
+color: #000000;  
+position: relative;
 }
 
 
@@ -440,6 +427,7 @@ color: #000000;
     flex-direction: column;
     align-items: flex-end; 
     margin-left: -2vw;  
+    position: absolute;
 
 }
 
@@ -459,37 +447,52 @@ height: 400px;
     border-radius: 10px;
     width: 300px;
     height: 400px;   
+} 
+
+#txt-infos-lieu
+{
+    margin-left: 50px;   
+
 }
+
+
+#txt-infos-lieu p 
+{
+
+width: 65%;
+font-size: 18px;
+line-height: 22px;
+line-height: 1.5em;
+color: #000000; 
+} 
 #journee-patrimoine 
 {
     display: flex;
     margin-top: 10%;
     padding: 2%;
     /* font-family: 'Montserrat', sans-serif; */
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-around; 
 }
 #journee-patrimoine ul
 {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: space-evenly;
     list-style: none;
-    width: 100vh; 
+
     border-radius: 20px;
     color: #fff;
-    background-color: #4062bb;  
+    background-color: #4062bb;
     margin: 1.75rem 0;
-    padding: 0rem 1rem 0rem 1rem;
+ 
 }  
 #journee-patrimoine li 
 {
-    border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
-    /* @extend %boxshadow; */
+    
     counter-increment: gradient-counter;
     margin-top: 1rem;
-    min-height: 3rem;
-    padding: 1rem 0rem 1rem 2rem; 
+    padding: 1rem 1rem 1rem 1rem;
 } 
 #journee-patrimoine li:hover 
 {
