--- a/css/style.css
+++ b/css/style.css
@@ -1523,6 +1523,26 @@ background-image: url(https://27.monvillagenormand.fr/images/300/327000357.webp)
 }
 #image-slider2{
 background-image: url(https://27.monvillagenormand.fr/images/300/327000359.webp); 
+} 
+
+@media screen and (max-width: 1040px) { 
+
+    #image-slider1, #image-slider2,.card-slider:nth-child(2), .card-slider:nth-child(3)
+    {
+        display: none;
+    }  
+
+    #main-slider
+  {
+     justify-content: center;
+  }
+
+    #image-slider, .card-slider:nth-child(1)
+    {
+        
+        width:  30VW;
+    }
+
 }
 #slider-lieu p
 {
