--- a/css/style.css
+++ b/css/style.css
@@ -1169,18 +1169,32 @@ margin-top: 5%;
   #zonededepot
   {
       margin-top: 5%;
-      width: 75%; 
+      width: 60%; 
       height:  50%;
       background-color: #fdc758; 
       border-color: #fff;
       border-style: dashed;  
       display: flex;
-      align-items: center; 
-  }  
+      align-items: center;  
+      flex-direction: column; 
+      
+  }   
+
+  #zonededepot div 
+  {
+      margin-bottom: 5%;
+  }
   #zonededepot p 
   {
       color: #4062BB;
-  } 
+  }  
+
+  #formdepot 
+  {
+      display: flex;
+      flex-direction: column;
+    align-items: center;
+  }
 
   #modinfos
   {
