--- a/css/style.css
+++ b/css/style.css
@@ -1165,12 +1165,14 @@ margin-top: 5%;
 {
     height: 20px;
     width: 20px;
-    background-color: black;
+    background-color: black; 
+    z-index: 4;
+
 } 
-#togadmin.active 
+/* #togadmin.active 
 {
     display: initial;
-}
+} */
   @media(max-width: 700px){  
 
     #gestion_admin 
@@ -1183,7 +1185,7 @@ margin-top: 5%;
     }
     #depot_photo 
     {
-        margin-top: 10vh;
+        margin-top: 100vh;
     }
     #depot_photo h4
     {
