--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ h1{
 
 
 #searchBarre{
+    z-index: 2;
     margin: 2vh 0vw 0 0;
     display: flex;
     padding: 0 2% 0 2%;
@@ -101,6 +102,21 @@ h1{
     height: 6vh;
     border-radius: 50px;
     background: #e9f0f1;
+}
+
+#ResultatsSearchBarre{
+    margin: 2vh 0vw 0 0;
+    display: flex;
+    padding: 0 2% 0 2%;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    border: 2px solid #f4f4f9;
+    width: 40vw;
+    height: 6vh;
+    border-radius: 50px;
+    background: #e9f0f1;
+    display: none;
 }
 
 #profil{
@@ -990,7 +1006,7 @@ flex-wrap: wrap;
 
     #peopleandcracc 
     {
-        width: 80vw;
+        width: 70vw;
         height: auto;
         display: flex;
         flex-direction: row;
@@ -1009,8 +1025,8 @@ flex-wrap: wrap;
     }
     #cracc 
     {
-        width: 60vw;
-        padding: 5vh 3vw 5vh 3vw;
+        width: 60%;
+        padding: 5vh 1vw 5vh 1vw;
         background-color: #4062BB;
         flex-direction: column;
         border-radius: 0 30px 30px 0; 
@@ -1090,7 +1106,7 @@ flex-wrap: wrap;
     .form_frontco input[type=email] {
         display: flex;
         width: 60%;
-        padding: 1vh 2vw;
+        padding: 1vh 1vw;
         margin: 0 0 1vh 0;
         box-sizing: border-box;
         background-color: #4062BB;
@@ -1106,7 +1122,7 @@ flex-wrap: wrap;
     
     .form_frontco  input[type=password] {
         width: 60%;
-        padding: 1vh 2vw;
+        padding: 1vh 1vw;
         margin: 2vh 0 5vh 0;
         box-sizing: border-box;
         font-family: 'Montserrat', sans-serif;
@@ -1119,7 +1135,7 @@ flex-wrap: wrap;
 
       .form_frontco  input[type=text] {
         width: 100%;
-        padding: 12px 20px;
+        padding: 1vh 1vw;
         margin: 8px 0;
         box-sizing: border-box; 
         background-color: #4062BB; 
@@ -1222,17 +1238,23 @@ img.leaflet-interactive{
 <img class='imageInfo' src="images/cirque.jpg"></img>
 <span class='titreInfo'>Cirque-Théatre</span> */ 
 
-
+.pageAdmin{
+    display: flex;
+    width: 80vw;
+    height: 100vh;
+    align-items: center;
+    justify-content: space-between;
+}
 
 #gestion_admin 
 {
-    
-    height: 200%; 
-    width: 20%; 
+    margin: 3vh;
+    padding: 5vh 1vw 5vh 1vw;
+    width: 25vw;
     margin-left: 0px;
-    background-color: #4062BB; 
-    display: flex;  
-    flex-direction: column;   
+    background-color: #4062BB;
+    display: flex;
+    flex-direction: column;
     border-radius: 0px 20px 20px 0px;
 
 }  
@@ -1241,15 +1263,31 @@ img.leaflet-interactive{
     display: initial;
 }
 
-#admindep, #admin, #membre
+#membre
 {
-display: flex; 
-flex-direction: column; 
-margin-left: 1%;
-margin-top: 5%;  
+    margin: 0vh 0vw 1vh 1vw;
 
 }   
 
+#admindep, #admin
+{
+    margin: 5vh 0vw 1vh 1vw;
+display: flex; 
+flex-direction: column; 
+
+}   
+
+#admindep span, #admin span, #membre span
+{
+  display: none;
+
+}   
+
+#admindep:hover span, #admin:hover span, #membre:hover span
+{
+  display: initial;
+
+}   
 
 #admindep p, #admin p, #membre p 
 {
@@ -1261,12 +1299,14 @@ margin-top: 5%;
 
 #membre  
 {
-    margin-top: 1%;   
+    display: flex;
+    flex-direction: column;
 }
 
 #admindep span, #admin span, #membre span
 {
-    margin-left: 5px;  
+    margin: 2vh 0vw 1vh 1vw;
+    width: fit-content;
     color: #fff;
 }
 .menu__item_gestion_membre, .menu__item_gestion_admin, .menu__item_gestion_admindep
@@ -1326,16 +1366,12 @@ margin-top: 5%;
   #depot_photo 
   {
       
-      position: absolute;
-      margin-left: 35%; 
-      width: 50%;
-      height: 80vh; 
-      border-radius: 40px;
-      display: flex; 
-      align-items: center;
-      flex-direction: column; 
-    
-      background-color: #4062BB; 
+    height: 60vh;
+    border-radius: 40px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: #4062BB;
   }  
 
   #depot_photo h4 
