--- a/css/style.css
+++ b/css/style.css
@@ -1115,7 +1115,7 @@ flex-wrap: wrap;
         border: none;
         border-bottom: 2px solid #fff;
     }
-      } 
+      
 
       .form_frontco  input[type=text] {
         width: 100%;
@@ -1747,7 +1747,6 @@ padding: 1vh 2vw 1vh 2vw;
   {
       width: 80vw;
       height: 100%;
-      background-color: pink;
       display: flex;  
       align-items: center; 
       justify-content: space-around;  
@@ -1760,17 +1759,24 @@ padding: 1vh 2vw 1vh 2vw;
     border: solid 1px; */
     border-radius: 20px;
     width: 15vw;
-    height: 40vh; 
+    height: 45vh; 
 }
 #image-slider, #image-slider1, #image-slider2 
 {
  height: 100%; 
  width: 100%;
-border-radius: 20px;
+
 background-repeat: no-repeat;
-background-size: cover;
-} 
-#image-slider{
+background-size: cover; 
+
+}  
+#image-slider img, #image-slider1 img, #image-slider2 img
+{
+    height: 100%; 
+    width: 100%;   
+    border-radius: 20px;
+}
+/* #image-slider{
 background-image: url( https://27.monvillagenormand.fr/images/300/327000356.webp); 
 }
 #image-slider1{
@@ -1778,7 +1784,7 @@ background-image: url(https://27.monvillagenormand.fr/images/300/327000357.webp)
 }
 #image-slider2{
 background-image: url(https://27.monvillagenormand.fr/images/300/327000359.webp); 
-} 
+}  */
 
 @media screen and (max-width: 1040px) { 
 
