--- a/css/style.css
+++ b/css/style.css
@@ -1759,7 +1759,7 @@ padding: 1vh 2vw 1vh 2vw;
     border: solid 1px; */
     border-radius: 20px;
     width: 15vw;
-    height: 45vh; 
+    height: 30vh; 
 }
 #image-slider, #image-slider1, #image-slider2 
 {
@@ -1801,7 +1801,8 @@ background-image: url(https://27.monvillagenormand.fr/images/300/327000359.webp)
     #image-slider, .card-slider:nth-child(1)
     {
         
-        width:  30VW;
+        width:  40vw;
+        height: 40vh;
     }
 
 }
