--- a/css/style.css
+++ b/css/style.css
@@ -1804,7 +1804,7 @@ background-image: url(https://27.monvillagenormand.fr/images/300/327000359.webp)
     #image-slider, .card-slider:nth-child(1)
     {
         
-        width:  30vw;
+        width:  3   0vw;
         height: 40vh;
     }
 
