--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,6 @@ h1{
     position: absolute;
     border: 2px solid #f4f4f9;
     width: 40vw;
-    height: 6vh;
     background: #e9f0f1;
     display: flex;
     border-radius: 30px;
@@ -154,7 +153,7 @@ h1{
 }
 
 
-#menuProfil{
+#menuProfil, #menuProfilAvant{
     display: flex;
     border: solid 2px #d4b902 ;
     z-index: 5;
@@ -169,14 +168,14 @@ h1{
     right: 2vw;
 }
 
-#menuProfil a{
-    margin: 2%;
+#menuProfil a, #menuProfilAvant a{
+    margin-top: 1vh;
     cursor: pointer;
     text-decoration: none;
     color:white;
 }
 
-#menuProfil a:hover{
+#menuProfil a:hover, #menuProfilAvant a:hover{
     width: max-content;
 font-weight: bold;
 }
@@ -194,7 +193,7 @@ font-weight: bold;
     cursor: pointer;
 }
 
-#menuProfil.ouvrir{
+#menuProfilAvant.ouvrir, #menuProfil.ouvrir{
         animation: 0.6s ease-out 0.1s 1 alternate ouvrir ;
         animation-fill-mode: forwards;
     }
@@ -210,6 +209,8 @@ font-weight: bold;
   }
 
 #searchBarre input{
+    width: 90%;
+    height: 50%;
     padding-right: 35%;
     color: #1a181b;
     font-size: 0.7rem;
@@ -1132,7 +1133,8 @@ flex-wrap: wrap;
 
     .form_frontco
     {
-        width: 100%;
+        
+    width: 60%;
         display: flex;
         justify-content: center;
        
@@ -1401,7 +1403,8 @@ flex-direction: column;
   #depot_photo 
   {
       
-    height: 60vh;
+    width: 35vw;
+    padding: 3vh 3vw 3vh 3vw;
     border-radius: 40px;
     display: flex;
     align-items: center;
@@ -1409,10 +1412,24 @@ flex-direction: column;
     background-color: #4062BB;
   }  
 
+  #depot_photo input[type="submit"] 
+  {
+      
+
+    border-radius: 20px;
+    padding: 1vh 1vw 1vh 1vw;
+    margin: 3vh;
+    /* background: red; */
+    /* width: 3vw; */
+    /* height: 3vh; */
+    outline: none;
+    border: none;
+  }  
+
   #depot_photo h4 
   {
 color: #fff; 
-margin-top: 5%;
+margin: 3vh 0 3vh 0;
   } 
 #togadmin 
 {
@@ -1441,11 +1458,6 @@ margin-top: 5%;
     {
         display: block;
     }
-    #depot_photo 
-    {
-        margin-top: 100vh; 
-        height: 60vh;
-    }
     #depot_photo h4
     {
         font-size: 0.7em;
@@ -1462,6 +1474,17 @@ margin-top: 5%;
         font-size: 0.6em;
     } 
 
+    #gestion_admin {
+        display: flex;
+    width: 80vw;
+    height: 20vh;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-evenly;
+    border-radius: 20px;
+    margin-left: 10vw;
+    }
+
   }
 
   input[type="file"]
@@ -1474,12 +1497,10 @@ margin-top: 5%;
 
   #zonededepot
   {
-      margin-top: 5%;
+      margin-top: 2vh;
       width: 60%; 
-      height:  50%;
-      background-color: #fdc758; 
+      height:50%;
       border-color: #fff;
-      border-style: dashed;  
       display: flex;
       align-items: center;  
       flex-direction: column; 
@@ -1497,10 +1518,34 @@ margin-top: 5%;
 
   #formdepot 
   {
+      width: 100%;
       display: flex;
       flex-direction: column;
     align-items: center;
   }
+
+  /* .btn-upload {
+    background-color: #e9f0f1;
+    border: 21px solid #000;
+    color: #000;
+    padding: 1vh 1vw;
+    border-radius: 10px;
+    font-size: 1rem;
+    font-family: 'Montserrat', sans-serif;
+  }
+
+  .parent-div {
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+  }
+  .parent-div input[type=file] {
+    left: 0;
+    top: 0;
+    opacity: 0;
+    position: absolute;
+    font-size: 2rem;
+  } */
 
   #modinfos
   {
@@ -2038,7 +2083,7 @@ background-image: url(https://27.monvillagenormand.fr/images/300/327000359.webp)
     justify-content: center;
 }
 
-#menuProfil{
+/* #menuProfil,#menuProfilAvant{
     
     opacity: 0;
     z-index: 5;
@@ -2052,7 +2097,7 @@ background-image: url(https://27.monvillagenormand.fr/images/300/327000359.webp)
     position: absolute;
     top: 3vh;
     right: 4.5vw;
-}
+} */
 
 @keyframes ouvrir {
 0% { transform:translateY(0px); opacity: 0;}
