--- a/css/style.css
+++ b/css/style.css
@@ -1174,7 +1174,13 @@ flex-wrap: wrap;
         justify-content: center;
        
     }  
-
+    .form_modtext_form {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    margin-top: -5%;
+    justify-content: space-evenly;
+    }
     .form_frontco input[type=email]{
         display: flex;
         width: 60%;
@@ -1188,7 +1194,7 @@ flex-wrap: wrap;
         border-bottom: 2px solid #fff;
     }
     
-    .form_frontco::placeholder, .form_modtext::placeholder {
+    .form_frontco ::placeholder, .form_modtext ::placeholder {
         color: #fff;
     }
     
@@ -1384,12 +1390,8 @@ flex-direction: column;
 .menu__item_gestion_membre, .menu__item_gestion_admin, .menu__item_gestion_admindep
 {
     margin-top: 2%;
-    cursor: pointer; 
-
-  
+    cursor: pointer;  
 }
-
-
 .menu__item_gestion_membre, .menu__item_gestion_admin, .menu__item_gestion_admindep{
     top: -1vh;
     text-decoration: none;
@@ -1602,18 +1604,34 @@ margin: 3vh 0 3vh 0;
   { 
     position: relative;
     background-color: #4062BB;
-    width: 50%; 
+    width: 50vw;
     height: 50vh;
-    flex-direction: column; 
-    border-radius: 50px; 
-    margin-left: 30%; 
+    flex-direction: column;
+    border-radius: 50px;
+    margin-left: 30%;
+    display: flex;
+    align-items: center;
     
   }
-  /* #modinfos form 
-  {
-      height: 200%;
 
-  } */
+  @media(max-width: 700px){   
+    
+    #modinfos
+    {
+        width:80vw;
+    height: 80vh; 
+    margin-left: 10vw;
+
+    } 
+    .form_modtext_form 
+    {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+}
+ 
 
 #codePostaux{
     display: grid;
