--- a/css/style.css
+++ b/css/style.css
@@ -2273,3 +2273,9 @@ background-image: url(https://27.monvillagenormand.fr/images/300/327000359.webp)
     margin-left: 2vw;
     margin-right: 2vw;
 }
+
+#pphoto img 
+{
+    /* width: 20%; */
+    height: 20%;
+}
