--- a/css/style.css
+++ b/css/style.css
@@ -472,6 +472,48 @@ footer {
     flex-wrap: wrap;
 }
 
+.placement{
+    width: 100vw;
+    height: 100vh;
+display: flex;
+align-items: center;
+}
+
+.placement h2{
+    color: #e9f0f1;
+    margin: 1vh 0 2vh 0;
+}
+
+.placement h3{
+    color: #e9f0f1;
+    margin: 0vh 0vw 0vh 1vw;
+}
+
+.adminDepart{
+    border-radius: 30px;
+    padding: 2vh 2vw 2vh 2vh;
+    background-color: #4062BB;
+    margin-left: 5vw;
+}
+
+
+.adminDepart form input[type="checkbox"]{
+    margin: 0.5vh 0 3vh 0;
+    background-color: #4062BB;
+    color: #d4b902;
+}
+
+.adminDepart form input[type="checkbox"]::after{
+    background-color: #4062BB;
+    color: #d4b902;
+}
+
+.adminDepart form p{
+    color: #e9f0f1;
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: 1vh 0;
+}
 
 /* #maCarte{
     border-radius: 30px;
@@ -1490,6 +1532,9 @@ img.leaflet-interactive {
 } */
 @media(max-width: 700px) {
 
+    .placement{
+        flex-direction: column;
+    }
 
     #gestion_admin.active {
         display: block;
